--- a/src/app/modules/main/content/components/releases/components/release-view/child-components/objectives/objectives.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/child-components/objectives/objectives.component.html
@@ -13,7 +13,51 @@
 
 <!-- View Block -->
 <div class="w-full" *ngIf="releaseDetails && releaseDetails?.releaseObjectives?.length">
+    <button mat-button class="" color="primary"  (click)="formViewType = 'add';">Add</button>
     {{releaseDetails?.releaseObjectives | json}}
+
+    <div class="w-full px-4 py-2 border border-gray-200 rounded-md" *ngFor="let objective of releaseDetails?.releaseObjectives">
+
+        <!-- Objective Title & Action Block -->
+        <div class="w-full flex justify-between items-center">
+            <div class="w-8/12 text-lg">{{objective.title}}</div>
+            <div class="w-2/12 flex justify-end items-center">
+                <div mat-flat-button class="select-none cursor-pointer rounded-full px-3 pr-2 py-1 flex items-center text-xs uppercase" [ngClass]="getStatusStyle(filterRequiredIds('status', objective.status))" [matMenuTriggerFor]="matObjectivesStatusMenu">
+                    {{filterRequiredIds('status', objective.status)}} <mat-icon class="cursor-pointer bg-white rounded-full ml-3">arrow_drop_down</mat-icon>
+                </div>
+                <mat-menu #matObjectivesStatusMenu="matMenu">
+                    <div class="" *ngFor="let status of releaseConfigDetails.objectiveStatus">
+                        <div class="text-xs p-3 uppercase hover:bg-gray-100 cursor-pointer hover:font-bold hover:text-blue-800 hover:border-l-2 hover:border-blue-800">{{status.value}}</div>
+                    </div>
+                </mat-menu>
+                <button mat-icon-button class="ml-2" matTooltip="More">
+                    <mat-icon>keyboard_arrow_down</mat-icon>
+                </button>
+            </div>
+        </div>
+
+        <!-- Objective Description, Delete & Edit Actions Block -->
+        <div class="w-full">
+            <div class="w-full py-4 text-gray-600">{{objective.description}}</div>
+        </div>
+
+        <!-- Modification Details -->
+        <div class="w-full flex justify-end items-center">
+            <div class="w-10/12 mt-4">
+                <div class="text-xs text-gray-600"><span class="font-bold">Last Modified Date:</span> {{objective.lastModifiedDate | date}}</div>
+                <div class="text-xs text-gray-600"><span class="font-bold">Last Modified By:</span> {{objective.lastModifiedById}}</div>
+            </div>
+            <div class="w-2/12 flex justify-end">
+                <button mat-icon-button class="" color="warn">
+                    <mat-icon class="mr-2">delete</mat-icon>
+                </button>
+                <button mat-icon-button class="">
+                    <mat-icon class="mr-2">edit</mat-icon>
+                </button>
+            </div>
+        </div>
+        
+    </div>
 </div>
 
 <!-- Form Block -->
