--- a/src/app/modules/shared/components/dialog/child-components/nav-menu/nav-menu.component.html
+++ b/src/app/modules/shared/components/dialog/child-components/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
-<div class="w-full p-2">
+<div class="w-full px-6">
     <div class="w-full flex flex-wrap justify-between my-4">
-        <div class="w-6/12 flex py-4 items-center hover:text-blue-500 hover:rounded-xl cursor-pointer" *ngFor="let menu of navMenuOptions" mat-dialog-close [routerLink]="menu.route">
+        <div class="w-6/12 flex py-4 items-center hover:text-blue-500 hover:rounded-xl cursor-pointer" *ngFor="let menu of navMenuOptions" (click)="navigate(menu.route)">
             <div class="p-4 flex items-center rounded-xl bg-gray-100">
                 <mat-icon class="">{{menu.icon}}</mat-icon>
             </div>
