--- a/src/app/modules/shared/components/dialog/dialog.component.html
+++ b/src/app/modules/shared/components/dialog/dialog.component.html
@@ -1,4 +1,4 @@
-<div class="-mx-6 px-6 -mt-2 border-b border-gray-200 pb-4">
+<div class="px-4 py-2 border-b border-gray-200">
 
     <!-- Header -->
     <div class="w-full flex items-center justify-between">
