--- a/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/release-view.component.html
@@ -102,7 +102,7 @@
             </div>
 
             <!-- Release Advanced Details -->
-            <div class="w-full mt-4 border border-gray-200 rounded-lg p-4">
+            <div class="w-full mt-4 border border-gray-200 rounded-lg p-4 mb-14">
 
                 <!-- Title -->
                 <div class="w-full flex justify-between">
