--- a/src/app/modules/shared/components/dialog/child-components/confirmation/confirmation.component.html
+++ b/src/app/modules/shared/components/dialog/child-components/confirmation/confirmation.component.html
@@ -1,4 +1,4 @@
-<div class="w-full">
+<div class="w-full p-4">
 
     <!-- Confirmation Title -->
     <div class="w-full py-8">{{data.confirmationContent.title}}</div>
