--- a/src/app/modules/main/content/components/releases/components/release-view/child-components/objectives/objectives.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/child-components/objectives/objectives.component.html
@@ -6,13 +6,8 @@
     </div>
 </div>
 
-<!-- Loading Block -->
-<div class="w-full mt-14 flex items-center justify-center" *ngIf="fetchLoader">
-    <mat-spinner class="mr-2" diameter="22"></mat-spinner> Fetching release objectives...
-</div>
-
 <!-- View Block -->
-<div class="w-full" *ngIf="releaseDetails && releaseDetails?.releaseObjectives?.length && formViewType === '' ">
+<div class="w-full">
 
     <!-- View Block Title and Actions -->
     <div class="w-full flex flex-wrap justify-between items-center mb-4">
@@ -25,66 +20,77 @@
         </div>
     </div>
 
-    <!-- View Block Objectives list -->
-    <div class="w-full px-4 py-2 border border-gray-200 rounded-md mb-4" *ngFor="let objective of releaseDetails?.releaseObjectives; let i = index;">
-
-        <!-- Objective Title & Action Block -->
-        <div class="w-full flex justify-between items-center">
-            <div class="w-8/12">
-                <div class="text-xs text-gray-600">#{{i+1}}</div>
-                <div class="">{{objective.title}}</div>
-            </div>
-            <div class="w-4/12 flex justify-end items-center">
-                <div mat-flat-button class="select-none cursor-pointer rounded-full px-3 pr-2 py-1 flex items-center text-xs uppercase" [ngClass]="getStatusStyle(filterRequiredIds('status', objective.status))" [matMenuTriggerFor]="matObjectivesStatusMenu">
-                    {{filterRequiredIds('status', objective.status)}} <mat-icon class="cursor-pointer bg-white rounded-full ml-3">arrow_drop_down</mat-icon>
-                </div>
-                <mat-menu #matObjectivesStatusMenu="matMenu">
-                    <div class="" *ngFor="let status of releaseConfigDetails.objectiveStatus">
-                        <div class="text-xs p-3 uppercase hover:bg-gray-100 cursor-pointer hover:font-bold hover:text-blue-800 hover:border-l-2 hover:border-blue-800">{{status.value}}</div>
-                    </div>
-                </mat-menu>
-                <button mat-icon-button class="ml-2" matTooltip="Show More" *ngIf="expandedObjectiveId !== objective._id" (click)="expandedObjectiveId = objective._id;">
-                    <mat-icon>keyboard_arrow_down</mat-icon>
-                </button>
-                <button mat-icon-button class="ml-2" matTooltip="Show Less" *ngIf="expandedObjectiveId !== '' && expandedObjectiveId === objective._id" (click)="expandedObjectiveId = '' ">
-                    <mat-icon>keyboard_arrow_up</mat-icon>
-                </button>
-            </div>
-        </div>
-
-        <!-- Expanded Block -->
-        <div class="w-full" *ngIf="expandedObjectiveId === objective._id ">
-            <!-- Objective Description, Delete & Edit Actions Block -->
-            <div class="w-full">
-                <div class="w-full py-4 text-gray-600 text-xs">{{objective.description}}</div>
-            </div>
-
-            <!-- Modification Details -->
-            <div class="w-full flex justify-end items-center">
-                <div class="w-10/12 mt-4">
-                    <div class="text-xs text-gray-600"><span class="font-semibold">Modified Date:</span> {{objective.lastModifiedDate | date}}</div>
-                    <div class="text-xs text-gray-600"><span class="font-semibold">Modified By:</span> {{objective.lastModifiedById}}</div>
-                </div>
-                <div class="w-2/12 flex justify-end">
-                    <button mat-icon-button class="" color="warn">
-                        <mat-icon class="mr-2">delete</mat-icon>
-                    </button>
-                    <button mat-icon-button class="" (click)="formViewType = 'Edit'; editObjectiveId = objective._id; editObjectives(objective) ">
-                        <mat-icon class="mr-2">edit</mat-icon>
-                    </button>
-                </div>
-            </div>
-        </div>
-        
-        
+    <!-- Loading Block -->
+    <div class="w-full mt-14 flex items-center justify-center" *ngIf="fetchLoader">
+        <mat-spinner class="mr-2" diameter="22"></mat-spinner> Fetching release objectives...
     </div>
+
+    <!-- View Block Objectives list -->
+    <div class="w-full" *ngIf="releaseDetails && releaseDetails?.releaseObjectives?.length && formViewType === '' ">
+        <div class="py-4 text-xs">
+            <span class="font-bold">Total:</span><span class="text-gray-800 ml-1">{{releaseDetails?.releaseObjectives.length}}</span>
+        </div>
+        <div class="w-full px-4 py-2 border border-gray-200 rounded-md mb-4" *ngFor="let objective of releaseDetails?.releaseObjectives; let i = index;">
+
+            <!-- Objective Title & Action Block -->
+            <div class="w-full flex justify-between items-center">
+                <div class="w-8/12">
+                    <div class="text-xs text-gray-600">#{{i+1}}</div>
+                    <div class="">{{objective.title}}</div>
+                </div>
+                <div class="w-4/12 flex justify-end items-center">
+                    <div mat-flat-button class="select-none cursor-pointer rounded-full px-3 pr-2 py-1 flex items-center text-xs uppercase" [ngClass]="getStatusStyle(filterRequiredIds('status', objective.status))" [matMenuTriggerFor]="matObjectivesStatusMenu">
+                        {{filterRequiredIds('status', objective.status)}} <mat-icon class="cursor-pointer bg-white rounded-full ml-3">arrow_drop_down</mat-icon>
+                    </div>
+                    <mat-menu #matObjectivesStatusMenu="matMenu">
+                        <div class="" *ngFor="let status of releaseConfigDetails.objectiveStatus">
+                            <div class="text-xs p-3 uppercase hover:bg-gray-100 cursor-pointer hover:font-bold hover:text-blue-800 hover:border-l-2 hover:border-blue-800">{{status.value}}</div>
+                        </div>
+                    </mat-menu>
+                    <button mat-icon-button class="ml-2" matTooltip="Show More" *ngIf="expandedObjectiveId !== objective._id" (click)="expandedObjectiveId = objective._id; getMemberDetails(objective.lastModifiedById)">
+                        <mat-icon>keyboard_arrow_down</mat-icon>
+                    </button>
+                    <button mat-icon-button class="ml-2" matTooltip="Show Less" *ngIf="expandedObjectiveId !== '' && expandedObjectiveId === objective._id" (click)="expandedObjectiveId = '' ">
+                        <mat-icon>keyboard_arrow_up</mat-icon>
+                    </button>
+                </div>
+            </div>
+    
+            <!-- Expanded Block -->
+            <div class="w-full" *ngIf="expandedObjectiveId === objective._id ">
+                <!-- Objective Description, Delete & Edit Actions Block -->
+                <div class="w-full">
+                    <div class="w-full py-4 text-gray-600 text-xs">{{objective.description}}</div>
+                </div>
+    
+                <!-- Modification Details -->
+                <div class="w-full flex justify-end items-center">
+                    <div class="w-10/12 mt-4">
+                        <div class="text-xs text-gray-600"><span class="font-semibold">Modified Date:</span> {{objective.lastModifiedDate | date}}</div>
+                        <div class="text-xs text-gray-600 flex items-center mt-1"><span class="font-semibold">Modified By:</span> <mat-spinner [diameter]="20" *ngIf="!objectiveModifiedName"></mat-spinner> <span class="ml-1 hover:underline hover:text-blue-600 cursor-pointer" *ngIf="objectiveModifiedName" [routerLink]="['../../admin/members', objective.lastModifiedById]">{{objectiveModifiedName?.firstName}} {{objectiveModifiedName?.lastName}}</span></div>
+                    </div>
+                    <div class="w-2/12 flex justify-end">
+                        <button mat-icon-button class="" color="warn" (click)="deleteObjectiveId = objective._id; objectiveDeleteActions(objective.title);">
+                            <mat-icon class="mr-2">delete</mat-icon>
+                        </button>
+                        <button mat-icon-button class="" (click)="formViewType = 'Edit'; editObjectiveId = objective._id; editObjectives(objective) ">
+                            <mat-icon class="mr-2">edit</mat-icon>
+                        </button>
+                    </div>
+                </div>
+            </div>
+            
+            
+        </div>
+    </div>
+    
 </div>
 
 <!-- Form Block -->
-<div class="w-full" *ngIf="formViewType !== '' ">
+<div class="w-full" *ngIf="['Add', 'Edit'].includes(formViewType)">
 
     <!-- Title -->
-    <div class="w-full text-lg">{{ formViewType}} Release Objective</div>
+    <div class="w-full text-lg">{{formViewType}} Release Objective</div>
     <div class="w-full text-xs text-gray-600">Enter all the requied fields*</div>
 
     <!-- Form Block -->
@@ -114,9 +120,15 @@
             </mat-form-field>
 
             <!-- Form Actions -->
-            <div class="w-full flex justify-end mt-8">
+            <div class="w-full flex justify-end mt-8" *ngIf="!formActionLoader">
                 <button mat-stroked-button class="" (click)="formViewType = '';">Cancel</button>
                 <button mat-flat-button class="ml-4" color="primary" (click)="updateReleaseObjectives()">{{formViewType === 'Add' ? 'Add' : 'Update'}}</button>
+            </div>
+
+            <!-- Form action loader -->
+            <div class="w-full flex justify-end mt-8" *ngIf="formActionLoader">
+                <mat-spinner [diameter]="20"></mat-spinner>
+                <span class="ml-2">{{formViewType}}ing Release Objective ...</span>
             </div>
         </div>
     </div>
