--- a/src/app/modules/main/content/components/releases/components/release-view/child-components/objectives/objectives.component.html
+++ b/src/app/modules/main/content/components/releases/components/release-view/child-components/objectives/objectives.component.html
@@ -2,7 +2,7 @@
 <div class="w-full flex flex-wrap mt-14" *ngIf="releaseDetails && !releaseDetails?.releaseObjectives.length && formViewType === '' ">
     <div class="w-full py-6 text-center text-gray-700">Hey, currently there are no objectives added for this release.</div>
     <div class="w-full flex justify-center">
-        <button mat-flat-button class="" color="primary" (click)="formViewType = 'Add';">Let's start adding Release Objectives</button>
+        <button mat-flat-button class="" color="primary" (click)="formViewType = 'Add'; resetForm();">Let's start adding Release Objectives</button>
     </div>
 </div>
 
@@ -16,7 +16,7 @@
             <div class="w-full text-xs text-gray-600">Click on <span class="font-bold italic">Show more</span> to view objective description and perform other actions.</div>
         </div>
         <div class="w-2/12 flex justify-end">
-            <button mat-stroked-button class="" color="primary" (click)="formViewType = 'Add';">+ Add Objectives</button>
+            <button mat-stroked-button class="" color="primary" (click)="formViewType = 'Add'; resetForm();">+ Add Objectives</button>
         </div>
     </div>
 
@@ -36,7 +36,7 @@
             <div class="w-full flex justify-between items-center">
                 <div class="w-8/12">
                     <div class="text-xs text-gray-600">#{{i+1}}</div>
-                    <div class="">{{objective.title}}</div>
+                    <div class="text-base">{{objective.title}}</div>
                 </div>
                 <div class="w-4/12 flex justify-end items-center">
                     <div mat-flat-button class="select-none cursor-pointer rounded-full px-3 pr-2 py-1 flex items-center text-xs uppercase" [ngClass]="getStatusStyle(filterRequiredIds('status', objective.status))" [matMenuTriggerFor]="matObjectivesStatusMenu">
@@ -57,10 +57,11 @@
             </div>
     
             <!-- Expanded Block -->
-            <div class="w-full" *ngIf="expandedObjectiveId === objective._id ">
+            <div class="w-full mt-4" *ngIf="expandedObjectiveId === objective._id ">
                 <!-- Objective Description, Delete & Edit Actions Block -->
                 <div class="w-full">
-                    <div class="w-full py-4 text-gray-600 text-xs">{{objective.description}}</div>
+                    <div class="text-xs text-gray-600 font-bold">DESCRIPTION</div>
+                    <div class="w-full pb-4 text-gray-600 text-xs">{{objective.description}}</div>
                 </div>
     
                 <!-- Modification Details -->
@@ -122,7 +123,7 @@
             <!-- Form Actions -->
             <div class="w-full flex justify-end mt-8" *ngIf="!formActionLoader">
                 <button mat-stroked-button class="" (click)="formViewType = '';">Cancel</button>
-                <button mat-flat-button class="ml-4" color="primary" (click)="updateReleaseObjectives()">{{formViewType === 'Add' ? 'Add' : 'Update'}}</button>
+                <button mat-flat-button class="ml-4" color="primary" (click)="updateReleaseObjectives()" [disabled]="releaseObjectivesForm.invalid">{{formViewType === 'Add' ? 'Add' : 'Update'}}</button>
             </div>
 
             <!-- Form action loader -->
